<resources>
    <string name="app_name">Escuestas</string>
    <string name="txtEncuesta">Realizar encuesta</string>
    <string name="txtMisEncuesta">Mis Encuestas</string>
    <string name="txtMade">Mis Encuestas</string>
    <string name="txtEliminar">Eliminar Encuesta</string>
    <string name="txtEditar">Editar Encuesta</string>
    <string name="txtTituloMain">Bienvenidos</string>
    <string name="txtLogin">Registro Usuario</string>
    <string name="txtTituloEncuesta">Encuesta</string>
    <string name="hintNombre">Nombre</string>
    <string name="txtApellidoPaterno">Apellido Paterno</string>
    <string name="hintApellidoMaterno">Apellido Materno</string>
    <string name="hintCorreo">Correo</string>
    <string name="txtPrimeraPreguntaEncuesta">¿En que esquema has viajado?</string>
    <string name="txtEjecutiva">Ejecutiva</string>
    <string name="txtEconomica">Economica</string>
    <string name="txtPromo">Promo</string>
    <string name="txtSegundaPreguntaEncuesta">¿Nuestro servicio es?</string>
    <string name="txtExcelente">Excelente</string>
    <string name="txtBueno">Bueno</string>
    <string name="txtMalo">Malo</string>
    <string name="hintMejorar">¿En que podemos mejorar?</string>
    <string name="txtOfertasDescuentos">Quiero recibir descuentos y promociones</string>
    <string name="txtEnviar">Enviar</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtPasswordLog">Password</string>
    <string name="txtEntrarLog">Entrar</string>
    <string name="app_nameNombreUsuario">Usuario</string>
    <string name="txtTituloEncuestas">Mis encuestas</string>
    <string name="background">FondoEncuesta</string>
    <string name="txtTituloEditarEncuesta">Editar encuesta</string>
    <string name="txtDetalleEncuesta">Detalle Encuesta</string>
    <string name="hintNumero">N</string>
    <string name="hintApellidoPaterno">Apellido Paterno</string>
    <string name="hintGenero">Genero</string>
    <string name="hintViajado">Viajado</string>
    <string name="hintFrecuencia">Frecuencia</string>
    <string name="hintExperiencia">Experiencia</string>
    <string name="txtEsquema">Esquema</string>
    <string name="txtServicio">Servicios</string>
    <string name="hintMejora">Mejora</string>
    <string name="txtOfertas">Oferta y Descuentos</string>
    <string name="txtEncuestaDetalle">Encuesta</string>
    <string name="txtTelefonoR">Telefono</string>
    <string name="txtTituloEliminar">Eliminar</string>
    <string name="txtSeleccionar">seleccionar</string>
</resources>
