<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    tools:context="QuizActivity">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <TextView
            android:id="@+id/txvTituloEncuesta"
            android:layout_width="wrap_content"
            android:background="@color/colorBlanco"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txtTituloEncuesta"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtNombreE"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hintNombre"
            android:background="@color/colorBlanco"
            android:textSize="15dp"
            android:gravity="center"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvTituloEncuesta" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="729dp"
            android:layout_marginBottom="100dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtApellidoPaternoE"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@color/colorBlanco"
            android:textSize="10dp"
            android:gravity="center"
            android:hint="@string/txtApellidoPaterno"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/edtNombreE" />

        <EditText
            android:id="@+id/edtApellidoMaternoE"
            android:layout_width="150dp"
            android:layout_height="30sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:background="@color/colorBlanco"
            android:hint="@string/hintApellidoMaterno"
            android:textSize="10dp"
            android:gravity="center"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/edtNombreE" />

        <EditText
            android:id="@+id/etdCorreoE"
            android:layout_width="150dp"
            android:layout_height="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorBlanco"
            android:ems="10"
            android:hint="@string/hintCorreo"
            android:textSize="10dp"
            android:gravity="center"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/edtApellidoPaternoE" />

        <Spinner
            android:id="@+id/spnGeneroE"
            android:layout_width="150dp"
            android:layout_height="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="38dp"
            android:background="@color/colorBlanco"
            android:entries="@array/generos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtApellidoMaternoE" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="254dp"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spnAero"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:entries="@array/Aero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            android:background="@color/colorBlanco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <Spinner
            android:id="@+id/spnFrecuencia"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/Frecuencia"
            android:background="@color/colorBlanco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnAero" />

        <Spinner
            android:id="@+id/spnExperiencia"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/Experiencia"
            android:background="@color/colorBlanco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnFrecuencia" />

        <TextView
            android:id="@+id/txvPrimeraPreguntaEncuesta"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtPrimeraPreguntaEncuesta"
            android:background="@color/colorBlanco"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnExperiencia" />

        <CheckBox
            android:id="@+id/ckbEconomica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlanco"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtEconomica"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <CheckBox
            android:id="@+id/ckbPromo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="68dp"
            android:background="@color/colorBlanco"
            android:text="@string/txtPromo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <CheckBox
            android:id="@+id/ckbEjecutiva"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/colorBlanco"
            android:layout_marginTop="10dp"
            android:text="@string/txtEjecutiva"
            app:layout_constraintEnd_toStartOf="@+id/ckbPromo"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toEndOf="@+id/ckbEconomica"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlanco"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="457dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvSegundaPreguntaEncuesta"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/txtSegundaPreguntaEncuesta"
            android:background="@color/colorBlanco"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />


        <RadioGroup
            android:id="@+id/rdgServicios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvSegundaPreguntaEncuesta">

            <RadioButton
                android:id="@+id/rdbExcelente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorBlanco"
                android:text="@string/txtExcelente" />

            <RadioButton
                android:id="@+id/rdbBueno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorBlanco"
                android:text="@string/txtBueno" />

            <RadioButton
                android:id="@+id/rdbMalo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlanco"
                android:layout_margin="10dp"
                android:text="@string/txtMalo" />
        </RadioGroup>

        <EditText
            android:id="@+id/edtMejorar"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@color/colorBlanco"
            android:hint="@string/hintMejorar"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdgServicios" />

        <Switch
            android:id="@+id/swtOfertasDescuentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtOfertasDescuentos"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorBlanco"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtMejorar" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtEnviar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swtOfertasDescuentos" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="384dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>
